--- a/style.css
+++ b/style.css
@@ -12,3 +12,14 @@ body {
     margin: 0;
 }
 
+.container {
+    display: flex;
+    padding: 20px;
+    margin: 0 auto;
+    max-width: 100%;
+    width: 800px;
+}
+
+aside {
+    padding: 10px 20px;
+}
